style.css
@import url(http://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic,300italic,300,100italic,100);




body {
   display: flex; 
   font-family: 'Roboto', Courier, monospace;
   margin: 0;
   flex-direction: column;
}
.header {
    background-color: #1f2937;
    display: flex;
    flex: 1 0 auto;
    align-items: center;
    color: #f9faf8;
    padding: 16px 150px;
    justify-content: space-between;
    
}
.logo {
    width: 75px;
    height: auto;
    margin-left: px;
}
a {
   text-decoration: none;
   color: #f9faf8; 
}
.headerlinks {
    margin-left: auto;
    font-size: 18px;
    color: #e5e7eb;
    display: flex;
    gap: 32px;
}
.intro {
    display: flex;
    background-color: #1f2937;
    flex: 1;
    color: #f9faf8;
    justify-content: center;
    align-items: center;
    padding: 16px 150px;
    gap: 30px;
    padding-bottom: 30px;
    flex-wrap: wrap;
}
.introtitle {
    font-weight: 900;
    font-size: 48px;
    color: #f9faf8;
    margin-left: px;
    max-width: px;
    margin-bottom: 0;
    padding: 16px;
}
button {
    min-width: 120px;
    min-height: 40px;
    border: none;
    background-color: #3882f6;
    border-radius: 8px;
    color: #f9faf8;
    font-size: 18px;
}
.introtext {
    max-width: px;
    margin-left: px;
    margin-top: 0;
    font-size: 18px;
    color: #e5e7eb;
    padding: 16px;
}
.placeholder {
    background-color: grey;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 1;
    margin: 0;
    max-width: 100%;
    max-height: 100%;
    border: #3882f6;
    border-radius: 10px;
}
.left{
    display: flex;
    flex-shrink: 1;
    flex-direction: column;
    justify-content: center;
    gap: 10px;
    flex: 1;
} 
h2 {
    font-size: 36px;
    font-weight: 900;
    color:#1f2937 ;
}
.info {
    display: flex;
    flex-direction: column;


    margin: 0;
    padding: 16px 150px;
}
.square {
    width: 200px;
    height: 200px;
    border-radius: 8px;
    border: 4px solid;
    border-color: #3882f6;
}
.cards {
    display: flex;
    flex-direction: column;
    text-align: center;
    max-width: 200px;
    justify-content: center;
    align-items: center;
    gap: 16px;
    padding: 16px 16px;
}
.c1 {
    text-align: center;
}

.c2 {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: space-evenly;

}
.quote {
    display: flex;
    flex-direction: column;
    background-color: #e5e7eb;
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    padding: 16px 150px;
    gap: 0px;
}
.person {
    display: flex;
    justify-content: flex-end;
    font-weight: 500;
    font-style: normal;
}
.signup {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 16px 150px;
    margin: 0;
}
.left2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1;
    align-content: center;
    margin: 0;
}
.signup-box {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #3882f6;
    width: 900px;
    height: 50px;
    border-radius: 8px;
    padding: 80px;
    color: #e5e7eb;
    margin-top: 100px;
    margin-bottom: 100px;
}
.call {
    color: #e5e7eb;
    margin: 0;
}
.call2 {
    margin: 0;
}
.bottombutton {
    border: 3px solid;
    border-color: #e5e7eb;
    margin-right: 50px;
    font-weight: 600;
}
.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 8px 0px 8px 0px;
    background-color: #1f2937;
    color: #e5e7eb;
    text-align: center;

}

